# AGME

./: .gitignore  ENGINEERING_CHOICES.md  WISHLIST.md  analyze_threshold.py  analyze_zs_equilibrium.py  brent_experiment.ipynb  build_paradigm_subset.py  check_weights.py  explore_corpus.py  explore_grammar.ipynb  phonological_adaptor_grammar.ipynb  profile_brent.py  profile_run.py  pyproject.toml  run_experiment.py  run_paradigm_experiment.py  smoke_test.py
agme/: __init__.py  api.py  features.py  utils.py
agme/inference/: __init__.py  segmenter.py  training.py  ur_proposer.py
agme/morphology/: __init__.py  base.py  grammar.py  pyp.py
agme/phonology/: __init__.py  candidates.py  constraints.py  grammar.py
data/: evaluate.py  klattbet.py  prepare_brent.py  verify_klattbet.py  words_gold.txt  words_ortho.txt  words_paradigm.txt  words_train.txt
tests/: conftest.py  test_api.py  test_constraints.py  test_features.py  test_phonology_grammar.py  test_pyp.py  test_segmenter.py  test_training.py
